--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     height: 450px;
-    text-align: center;
+    
 }
 
 .Calculator{
@@ -14,6 +14,20 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+}
+
+.display{
+    border: 2px solid purple;
+    width: 225px;
+    height: 60px;
+    margin: 5px;
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
+}
+
+.display0{
+    font-size: xx-large;
 }
 
 .Row{
@@ -28,6 +42,7 @@
 }
 
 button{
+    text-align: center;
     height: 50px;
     width: 50px;
 }
