--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 450px;
+    height: 650px;
     
 }
 
@@ -18,8 +18,8 @@
 
 .display{
     border: 2px solid purple;
-    width: 225px;
-    height: 60px;
+    width: 330px;
+    height: 100px;
     margin: 5px;
     display: flex;
     justify-content: right;
@@ -31,18 +31,19 @@
 }
 
 .Row{
-    width: 250px;
+    width: 350px;
     display: flex;
     justify-content: space-evenly;
     border: 2px solid orange;
 }
 
 #operand0{
-    width: 110px;
+    width: 170px;
 }
 
 button{
+    font-size: large;
     text-align: center;
-    height: 50px;
-    width: 50px;
+    height: 80px;
+    width: 80px;
 }
